[build-system]
requires = [
    "setuptools>=61.0.0",
    "wheel>=0.37.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "thysecser"
description = "Thycotic Secret Server API client"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = [
    "version",
]

[[project.authors]]
name = "William Jackson"
email = "wjackson@informatica.com"

[project.urls]
"Homepage" = "https://github.com/informatica-na-presales-ops/thycotic-secret-server-api"
"Bug Tracker" = "https://github.com/informatica-na-presales-ops/thycotic-secret-server-api/issues"

[tool.setuptools.dynamic]
version.attr = "thysecser.__version__"
