[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.7.19,<0.8.0"]

[project]
name = "thysecser"
version = "2025.0"
description = "Thycotic Secret Server API client"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.32.3",
]

[[project.authors]]
name = "William Jackson"
email = "wjackson@informatica.com"

[project.urls]
"Homepage" = "https://github.com/informatica-na-presales-ops/thycotic-secret-server-api"
"Issues" = "https://github.com/informatica-na-presales-ops/thycotic-secret-server-api/issues"
